# wiring-harness

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LESSONSLEARNED.md  README.md  REFS-PUBLIC.md  SECURITY.md  devices.example.toml  devices.toml  pyproject.toml  services.example.toml  services.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/caddy/: Caddyfile.example
config/dnsmasq/: services.conf.example
docs/: contributor-architecture-blueprint.md
docs/diagrams/: python-classes.puml  python-packages.puml  repo-architecture.drawio  repo-architecture.puml  shell-call-graph.puml  tooling-integrations.puml
scripts/: apply_site_changes.sh  deploy_snowbridge_filebrowser_fork_image.sh  export_mtls_passwords_to_keepass.py  export_mtls_profile.py  inspect_mtls_device.py  render_private_site_inventory.py  restage_mtls_device.py  setup-mtls.sh  setup_caddy.py  site_registry.py
